Delete User Cart w/ Auth - API Endpoint
